--- a/SDD/en.lproj/MainStoryboard.storyboard
+++ b/SDD/en.lproj/MainStoryboard.storyboard
@@ -1,18 +1,75 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="SDDViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                    <view key="view" contentMode="scaleToFill" id="3" customClass="UIControl">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Welcome to SDD secure login" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CX1-p7-Ok5">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Id" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bau-HU-nxw">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="textFieldShouldReturn:" destination="2" eventType="editingDidEndOnExit" id="ARP-f1-m3j"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3uH-Y1-lpl">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <connections>
+                                    <action selector="textFieldShouldReturn:" destination="2" eventType="editingDidEndOnExit" id="5NY-LB-G62"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c2L-nl-GAC">
+                                <color key="backgroundColor" red="0.33200760950000002" green="0.45928510709999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="193" id="ons-a2-Uiz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Log In">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="0.33200760953712438" green="0.45928510708666415" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="Login:" destination="2" eventType="touchDown" id="Ukh-gE-ves"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Bau-HU-nxw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="1Vh-2i-JBx"/>
+                            <constraint firstItem="Bau-HU-nxw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="80" id="4Yb-Vr-9qi"/>
+                            <constraint firstItem="c2L-nl-GAC" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="61" id="5zV-Dg-Nyp"/>
+                            <constraint firstItem="c2L-nl-GAC" firstAttribute="top" secondItem="3" secondAttribute="top" constant="209" id="8kL-S7-Txy"/>
+                            <constraint firstItem="Bau-HU-nxw" firstAttribute="centerX" secondItem="CX1-p7-Ok5" secondAttribute="centerX" type="default" id="CR6-Ok-EHX"/>
+                            <constraint firstItem="Bau-HU-nxw" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="EdT-0Z-SbT"/>
+                            <constraint firstItem="3uH-Y1-lpl" firstAttribute="top" secondItem="3" secondAttribute="top" constant="141" id="IvZ-5M-6Xi"/>
+                            <constraint firstAttribute="trailing" secondItem="3uH-Y1-lpl" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="K7g-fD-F15"/>
+                            <constraint firstItem="3uH-Y1-lpl" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="NE2-hK-qnz"/>
+                            <constraint firstItem="CX1-p7-Ok5" firstAttribute="top" secondItem="3" secondAttribute="top" constant="38" id="swF-Pa-JhU"/>
+                        </constraints>
+                        <connections>
+                            <action selector="backgroundShouldBeTouched:" destination="2" eventType="touchDown" id="7Im-lK-oZs"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="tbPassword" destination="3uH-Y1-lpl" id="okm-S4-Qid"/>
+                        <outlet property="tbUserId" destination="Bau-HU-nxw" id="ehd-pL-9WI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
